--- a/application/index/view/user/userinfo.html
+++ b/application/index/view/user/userinfo.html
@@ -26,10 +26,31 @@
     </tr>
     {volist name="examList" id="exam" empty="$empty"}
     <tr>
-        <td>{$exam.name}</td>
+        <td>{$exam.id}</td>
         <td id="score">{$exam.score}</td>
     </tr>
     {/volist}
 </table>
+
+<div class="col-md-12">
+    <h4 class="text-center">视频列表</h4>
+    <ul style="list-style: none;">
+        {volist name="videoData" id="test" empty="$empty"}
+        <li style="margin-bottom: 50px;display: inline-block">
+            <h5>{$i}</h5>
+            <!--视频列表-->
+            <a href="{:url('user/VideoDetail',['id'=> $test.id])}">
+                <video style="width: 330px">
+                    <source src="/uploads/{$test.video_url}" type="video/mp4"/>
+                </video>
+            </a>
+            <!--题目列表标题-->
+            <h5>{$test.title}</h5>
+        </li>
+        {/volist}
+    </ul>
+</div>
+
+
 
 {include file="public:footer"/}
