--- a/application/admin/view/user/examlist.html
+++ b/application/admin/view/user/examlist.html
@@ -18,7 +18,27 @@
     </tr>
     {/volist}
 </table>
-<!--分页-->
+
+<div class="col-md-12">
+    <h4 class="text-center">视频列表</h4>
+    <ul style="list-style: none;">
+        {volist name="videoData" id="test" empty="$empty"}
+        <li style="margin-bottom: 50px;display: inline-block">
+            <h5>{$i}</h5>
+            <!--视频列表-->
+            <a href="{:url('video/VideoDetail',['id'=> $test.id])}">
+                <video style="width: 330px">
+                    <source src="/uploads/{$test.video_url}" type="video/mp4"/>
+                </video>
+            </a>
+            <!--题目列表标题-->
+            <h5>{$test.title}</h5>
+        </li>
+        {/volist}
+    </ul>
+</div>
+
+
 <script>
     function isEdit() {
         if (confirm('确认修改')) {
