--- a/application/admin/view/question/add.html
+++ b/application/admin/view/question/add.html
@@ -240,7 +240,7 @@
         <div class="form-group" style="display:flex;justify-content: space-between;margin-top: 50px">
             <label for="title_question">选择要上传的题目文件:</label>
 
-            <input type="file" name="title_question" id="title_question">
+            <input type="file" name="title_question" id="title_question" style="position: static;opacity: 1;width:auto">
             <!-- 这里使用原生的post提交 -->
             <button type="submit" class="btn btn-primary">保存</button>
 
