--- a/application/admin/view/user/userlist.html
+++ b/application/admin/view/user/userlist.html
@@ -7,7 +7,7 @@
         <td>邮箱</td>
         <td>班级</td>
         {if condition="($Think.session.is_admin == 2)"}
-          <td>设置管理员</td>
+          <td>设置老师</td>
         {/if}
         <td>操作</td>
         <td>信息</td>
