--- a/application/admin/view/user/examlist.html
+++ b/application/admin/view/user/examlist.html
@@ -3,7 +3,7 @@
 <table class="table table-hover text-center">
     <tr>
 
-        <td>开始名称</td>
+        <td>考试名称</td>
         <td>考试得分</td>
         <td>操作</td>
     </tr>
