--- a/application/index/view/index/videolist.html
+++ b/application/index/view/index/videolist.html
@@ -2,16 +2,15 @@
 <div class="col-md-12">
     <ul style="list-style: none;">
         {volist name="testData" id="test" empty="$empty"}
-        <li style="margin-bottom: 50px;display: inline-block">
+        <li style="margin-bottom: 20px;">
             <h5>{$i}</h5>
             <!--视频列表-->
             <a href="{:url('index/VideoDetail',['id'=> $test.id])}">
-            <video style="width: 330px">
-                <source src="/uploads/{$test.video_url}" type="video/mp4"/>
-            </video>
+                <h5>{$test.title}</h5>
+            <!--<video style="width: 330px">-->
+                <!--<source src="/uploads/{$test.video_url}" type="video/mp4"/>-->
+            <!--</video>-->
             </a>
-            <!--题目列表标题-->
-            <h5>{$test.title}</h5>
         </li>
         {/volist}
     </ul>
